Upgraded Jackson to 2.8.4 and fixed an issue caused by the newer version

--- a/filter-json-jackson/pom.xml
+++ b/filter-json-jackson/pom.xml
@@ -14,10 +14,6 @@
   <name>Partial Response: Jackson JSON Filter</name>
   <description>Filter for json output that is based on the jackson library</description>
 
-  <properties>
-    <jackson.version>2.3.1</jackson.version>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
@@ -34,18 +30,22 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>pl.pragmatists</groupId>
       <artifactId>JUnitParams</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava-testlib</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
