--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,8 @@
 
   <properties>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
     <guava.version>18.0</guava.version>
+    <jackson.version>2.8.4</jackson.version>
   </properties>
 
   <dependencyManagement>
