--- a/matcher/pom.xml
+++ b/matcher/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.pressassociation.partial-response</groupId>
     <artifactId>partial-response</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
   </parent>
 
   <artifactId>matcher</artifactId>
