--- a/filter-json-jackson/pom.xml
+++ b/filter-json-jackson/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>partial-response</artifactId>
     <groupId>com.pressassociation.partial-response</groupId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>filter-json-jackson</artifactId>
